--- a/public/css/app.css
+++ b/public/css/app.css
@@ -27,7 +27,7 @@ body {
 
 #headerwrap {
     background: url(https://templatemag.com/demo/templates/Spot/img/header-bg.jpg) no-repeat center top;
-    margin-top: -10px;
+    /*margin-top: -10px;*/
     padding-top: 20px;
     text-align: center;
     background-attachment: relative;
